# just-ledger

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  PROGRESS.md  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  pages.yml
apps/web/: .npmrc  CLAUDE.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
contracts/: README.md  account.schema.json  balance.schema.json  check.mjs  common.schema.json  entry.schema.json  inference.schema.json  ingest-batch.schema.json  ingest-payload.schema.json  notify-envelope.schema.json  notify-event.schema.json  statement-record.schema.json  txn.schema.json
db/: CLAUDE.md
db/functions/: rls.pgsql  rollup.pgsql  worker.pgsql
db/migrations/: 0001_init.down.pgsql  0001_init.up.pgsql
db/tests/: 01_negative.pgsql  01b_deferred_commit.pgsql  01c_rls_role_inv.pgsql  02_bulk_100k.pgsql  03_rollup_parity.pgsql  04_rls.pgsql  05_notify.pgsql  run.sh  validate-notify.mjs
db/triggers/: balance_notify.pgsql  inv_triggers.pgsql
docs/Harness/: HARNESS.md
docs/Whitepaper/: DESIGN-WHITEPAPER.md  TECH-WHITEPAPER.md
fixtures/analytics/: expected.jsonl  gen.R  requests.jsonl
fixtures/classify/: gen.mjs  golden.jsonl
fixtures/dsl/: requests.jsonl
fixtures/ingest/: README.md  hana.csv  hana.expected.json  kb.csv  kb.expected.json  toss.csv  toss.expected.json
fixtures/settlement/: gen.mjs
fixtures/simulation/: expected.jsonl  requests.jsonl
infra/: compose.yaml  smoke-e2e.mjs  smoke.sh
infra/devcontainer/: Dockerfile
modules/analytics/: CLAUDE.md  main.R
modules/rules-dsl/: CLAUDE.md  build-check.sh  rules-dsl.cabal
modules/rules-dsl/app/: Main.hs
modules/rules-dsl/src/Rules/: Check.hs  Eval.hs  Parser.hs  Protocol.hs  Syntax.hs
modules/rules-dsl/test/: Spec.hs
modules/settlement/: CLAUDE.md  amort.cbl  build.sh  (+4 more)
modules/statement-wasm/: CLAUDE.md  Cargo.toml
modules/statement-wasm/examples/: bench_native.rs
modules/statement-wasm/src/: amount.rs  crypto.rs  csv.rs  decode.rs  error.rs  lib.rs  normalize.rs  parse.rs  profile.rs  record.rs
modules/statement-wasm/tests/: golden.rs
scripts/: bench-wasm.mjs  check-hardcoded-color.mjs  check-no-float.mjs  linguist-gate.lua
(+162 files in other folders)
