cabal-version:      3.0
name:               rules-dsl
version:            0.1.0
synopsis:           just-ledger 예산 규칙 DSL — 렉서·파서·타입검사·평가기
build-type:         Simple

common warnings
    ghc-options: -Wall -Werror=incomplete-patterns
    default-extensions: OverloadedStrings

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Rules.Syntax
                      Rules.Parser
                      Rules.Check
                      Rules.Eval
                      Rules.Protocol
    build-depends:    base >=4.18 && <5,
                      text >=2.0,
                      containers,
                      megaparsec >=9.0,
                      aeson >=2.1,
                      bytestring
    default-language: GHC2021

executable rules-dsl
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    base, rules-dsl, bytestring
    default-language: GHC2021

test-suite spec
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base, rules-dsl, text, containers,
                      aeson, bytestring, vector
    default-language: GHC2021
